@@ -1,3 +1,7 @@
+2016-04-14  Stipe Tolj  <stolj at kannel.org>
+    * doc/userguide/userguide.xml: add documentation for escape code '%e'.
+    * gw/urltrans.c: add escape code '%e' for printable hexadecimal byte codes.
+    
 2016-02-15  Stipe Tolj  <stolj at kannel.org>
     * gw/dlr.c: add missing original DLR bit-mask forwarding in case of 
       DLR SMSC[SUCCESS|FAIL] events.
